--- a/src/containers/StartupContainers/SideBar/styles.scss
+++ b/src/containers/StartupContainers/SideBar/styles.scss
@@ -105,31 +105,32 @@
       }
 
       &:hover {
-        background-color: $color-primary-100;
+        background-color: $color-primary-200;
+        color: $color-white;
+        border: 1px solid $color-primary-300;
       }
 
       &:active {
-        background-color: $color-grey-200;
+        background-color: $color-primary;
       }
 
       &.ps-active {
-        background-color: $color-primary-100;
-        border: 1px solid $color-primary-200;
+        background-color: $color-primary;
 
         &:hover {
-          background-color: $color-primary-100;
-          border: 1px solid $color-primary-100;
+          background-color: $color-primary-600;
+          border: 1px solid $color-primary-700;
         }
 
         &:active {
           border: 1px solid $color-primary-100;
-          background-color: $color-primary-200;
+          background-color: $color-primary;
         }
 
         .ps-menu-icon,
         .ps-menu-label,
         .ps-menu-icon {
-          color: $color-primary;
+          color: $color-white;
           margin: 0;
         }
       }
