--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,22 @@
 @import 'src/modules/components/scss/styles';
 @import './assets/fonts/styles.css';
 
-
 // tailwind
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9e9e9e70;
+  border-radius: 8px;
+}
